--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "core-util-is": "^1.0.2",
+    "dotenv": "^8.2.0",
     "https": "^1.0.0",
     "line-reader": "^0.4.0",
     "moment": "^2.27.0",
     "node-telegram-bot-api": "^0.50.0",
     "url": "^0.11.0"
-  },
-  "devDependencies": {
-    "dotenv": "^8.2.0"
   }
 }
